refactor: fine tuning